--- a/portfolio.html
+++ b/portfolio.html
@@ -2,19 +2,21 @@
 <html lang="ru">
 
 <head>
+    
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
     <header>
         <!-- Шапка сайта -->
         <nav>
-            <a href="./"> <span>Web</span> Studio </a>
+            <a href="./index.html"> <span>Web</span> Studio </a>
 
             <ul>
-                <li><a href="">Студия</a></li>
+                <li><a href="./index.html">Студия</a></li>
                 <li><a href="">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
