add css for navigation

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <header>
       <!-- Шапка сайта -->
       <nav>
-        <a href="./"> <span>Web</span> Studio </a>
+        <a href="./" class="logo"> <span>Web</span> Studio </a>
 
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="portfolio.html">Портфолио</a></li>
+        <ul class="site-nav list">
+          <li><a href="" class="link current">Студия</a></li>
+          <li><a href="./portfolio.html">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
 
-        <ul>
+        <ul class="list">
           <li>
             <a href="mailto:info@devstudio.com">
               <img src="./images/envelope.svg" alt="изображение письма" />
@@ -36,12 +36,12 @@
       </nav>
     </header>
     <main>
-      <section>
+      <section class="hero">
         <!-- Герой -->
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <a href="">Заказать услугу</a>
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <a href="" class="button primary">Заказать услугу</a>
       </section>
-      <section>
+      <section class="section">
         <!-- Первая секция - наши преимущества-->
         <h2 hidden>Наши преимущества</h2>
         <!--скрытый заголовок-->
@@ -80,9 +80,9 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="section">
         <!-- Вторая секция - чем мы занимаемся-->
-        <h2>Чем мы занимаемся</h2>
+        <h2 class="section-title">Чем мы занимаемся</h2>
         <ul>
           <li>
             <img
@@ -119,9 +119,9 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="section">
         <!--Третья секция - наша команда-->
-        <h2>Наша команда</h2>
+        <h2 class="section-title">Наша команда</h2>
         <ul>
           <li>
             <!--Первая фотка-->
@@ -257,9 +257,9 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="section">
         <!--Четвертая секция - постоянные клиенты-->
-        <h2>Постоянные клиенты</h2>
+        <h2 class="section-title">Постоянные клиенты</h2>
         <ul>
           <li>
             <a href="">
