--- a/portfolio.html
+++ b/portfolio.html
@@ -13,15 +13,15 @@
     <header>
         <!-- Шапка сайта -->
         <nav>
-            <a href="./index.html"> <span>Web</span> Studio </a>
+            <a href="./index.html" class ="logo"> <span>Web</span> Studio </a>
 
-            <ul>
+            <ul class="site-nav list">
                 <li><a href="./index.html">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
+                <li><a href="" class="link current" >Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
 
-            <ul>
+            <ul class="list">
                 <li>
                     <a href="mailto:info@devstudio.com">
                         <img src="./images/envelope.svg" alt="изображение письма" />
@@ -40,21 +40,21 @@
     <main>
         <section>
             <!-- Категории -->
-            <ul>
+            <ul class="list">
                 <li>
-                    <a href="">Все</a>
+                    <a href="" class="button secondary">Все</a>
                 </li>
                 <li>
-                    <a href="">Веб-сайты</a>
+                    <a href="" class="button secondary">Веб-сайты</a>
                 </li>
                 <li>
-                    <a href="">Приложения</a>
+                    <a href="" class="button secondary">Приложения</a>
                 </li>
                 <li>
-                    <a href="">Дизайн</a>
+                    <a href="" class="button secondary">Дизайн</a>
                 </li>
                 <li>
-                    <a href="">Маркетинг</a>
+                    <a href="" class="button secondary">Маркетинг</a>
                 </li>
             </ul>
         </section>
