add normalize css

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
@@ -21,7 +26,7 @@
                 <li><a href="">Контакты</a></li>
             </ul>
 
-            <ul class="list">
+            <ul class="contact list">
                 <li>
                     <a href="mailto:info@devstudio.com">
                         <img src="./images/envelope.svg" alt="изображение письма" />
