--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/normalize.css" />
@@ -16,7 +16,9 @@
     <header>
       <!-- Шапка сайта -->
       <nav>
-        <a href="./" class="logo"> <span>Web</span> Studio </a>
+        <a href="./" class="logo">
+          <span class="logo-accent">Web</span> Studio
+        </a>
 
         <ul class="site-nav list">
           <li><a href="" class="link current">Студия</a></li>
@@ -50,10 +52,10 @@
         <!-- Первая секция - наши преимущества-->
         <h2 hidden>Наши преимущества</h2>
         <!--скрытый заголовок-->
-        <ul>
+        <ul class="list">
           <li>
             <img src="./images/section1/antenna.svg" alt="Антена" />
-            <h3>Внимание к деталям</h3>
+            <h3 class="item-title">Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
@@ -61,7 +63,7 @@
           </li>
           <li>
             <img src="./images/section1/clock.svg" alt="Часы" />
-            <h3>Пунктуальность</h3>
+            <h3 class="item-title">Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
@@ -69,7 +71,7 @@
           </li>
           <li>
             <img src="./images/section1/diagram.svg" alt="Диаграмма" />
-            <h3>Планирование</h3>
+            <h3 class="item-title">Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
@@ -77,7 +79,7 @@
           </li>
           <li>
             <img src="./images/section1/astronaut.svg" alt="Астронавт" />
-            <h3>Современные технологии</h3>
+            <h3 class="item-title">Современные технологии</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
@@ -88,7 +90,7 @@
       <section class="section">
         <!-- Вторая секция - чем мы занимаемся-->
         <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/section2/laptop.png"
@@ -127,7 +129,7 @@
       <section class="section">
         <!--Третья секция - наша команда-->
         <h2 class="section-title">Наша команда</h2>
-        <ul>
+        <ul class="list">
           <li>
             <!--Первая фотка-->
             <img
@@ -138,7 +140,7 @@
             />
             <h3>Николай Кучеренко</h3>
             <p lang="en">Product Designer</p>
-            <ul>
+            <ul class="list">
               <li>
                 <a href="Instagram" aria-label="Ссылка на Instagram">
                   <img src="./images/instagram.svg" alt="Instagram" />
@@ -171,7 +173,7 @@
             />
             <h3>Ольга Иванова</h3>
             <p lang="en">Frontend Developer</p>
-            <ul>
+            <ul class="list">
               <li>
                 <a href="Instagram" aria-label="Ссылка на Instagram">
                   <img src="./images/instagram.svg" alt="Instagram" />
@@ -204,7 +206,7 @@
             />
             <h3>Андрей Шевченко</h3>
             <p lang="en">Marketing</p>
-            <ul>
+            <ul class="list">
               <li>
                 <a href="Instagram" aria-label="Ссылка на Instagram">
                   <img src="./images/instagram.svg" alt="Instagram" />
@@ -237,7 +239,7 @@
             />
             <h3>Иван Николаев</h3>
             <p lang="en">UI Designer</p>
-            <ul>
+            <ul class="list">
               <li>
                 <a href="Instagram" aria-label="Ссылка на Instagram">
                   <img src="./images/instagram.svg" alt="Instagram" />
@@ -265,7 +267,7 @@
       <section class="section">
         <!--Четвертая секция - постоянные клиенты-->
         <h2 class="section-title">Постоянные клиенты</h2>
-        <ul>
+        <ul class="list">
           <li>
             <a href="">
               <img
@@ -319,9 +321,9 @@
     </main>
     <footer>
       <!-- Футер -->
-      <a href="/"> <span>Web</span> Studio </a>
+      <a href="/" class="logo"> <span class="logo-accent">Web</span> Studio </a>
       <address>
-        <ul>
+        <ul class="contact list">
           <li>
             <p>г. Киев, пр-т Леси Украинки, 26<br /></p>
           </li>
@@ -336,7 +338,7 @@
       <b>
         присоединяйтесь
       </b>
-      <ul>
+      <ul class="list">
         <li>
           <a href="Instagram" aria-label="Ссылка на Instagram">
             <img src="./images/instagram.svg" alt="Instagram" />
