--- a/portfolio.html
+++ b/portfolio.html
@@ -1,172 +1,271 @@
 <!DOCTYPE html>
 <html lang="ru">
-
-<head>
-    
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/styles.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <!-- Шапка сайта -->
-        <nav>
-            <a href="./index.html" class ="logo"> <span>Web</span> Studio </a>
+      <!-- Шапка сайта -->
+      <nav>
+        <a href="./index.html" class="logo">
+          <span class="logo-accent">Web</span> Studio
+        </a>
 
-            <ul class="site-nav list">
-                <li><a href="./index.html">Студия</a></li>
-                <li><a href="" class="link current" >Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
-            </ul>
+        <ul class="site-nav list">
+          <li><a href="./index.html">Студия</a></li>
+          <li><a href="" class="link current">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
 
-            <ul class="contact list">
-                <li>
-                    <a href="mailto:info@devstudio.com">
-                        <img src="./images/envelope.svg" alt="изображение письма" />
-                        info@devstudio.com
-                    </a>
-                </li>
-                <li>
-                    <a href="tel:+380961111111">
-                        <img src="./images/smartphone.svg" alt="изображение телефона" />
-                        +38 096 111 11 11
-                    </a>
-                </li>
-            </ul>
-        </nav>
+        <ul class="contact list">
+          <li>
+            <a href="mailto:info@devstudio.com">
+              <img src="./images/envelope.svg" alt="изображение письма" />
+              info@devstudio.com
+            </a>
+          </li>
+          <li>
+            <a href="tel:+380961111111">
+              <img src="./images/smartphone.svg" alt="изображение телефона" />
+              +38 096 111 11 11
+            </a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <main>
-        <section>
-            <!-- Категории -->
-            <ul class="list">
-                <li>
-                    <a href="" class="button secondary">Все</a>
-                </li>
-                <li>
-                    <a href="" class="button secondary">Веб-сайты</a>
-                </li>
-                <li>
-                    <a href="" class="button secondary">Приложения</a>
-                </li>
-                <li>
-                    <a href="" class="button secondary">Дизайн</a>
-                </li>
-                <li>
-                    <a href="" class="button secondary">Маркетинг</a>
-                </li>
-            </ul>
-        </section>
-        <section>
-            <h1 hidden>Примеры по категориям</h1>
-            <ul>
-                <li>
-                    <img src="./images/portfolio/img.jpg" alt="Ноутбук" width="370" height="294" />
-                    <a href="" <h2>Технокряк</h2>
-                    </a>
-                    <h3>Веб-сайт</h3>
-                <li>
-                    <img src="./images/portfolio/img2.jpg" alt="Баскетбольная игра" width="370" height="294" />
-                    <a href="" <h2>Постер New Orlean vs Golden Star</h2>
-                    </a>
-                    <h3>Дизайн</h3>
-                </li>
-                <li>
-                    <img src="./images/portfolio/img3.jpg" alt="Логотип ресторана Seafood" width="370" height="294" />
-                    <a href="" <h2>Ресторан Seafood</h2>
-                    </a>
-                    <h3>Приложение</h3>
-                </li>
-                <li>
-                    <img src="./images/portfolio/img4.jpg" alt="Наушники" width="370" height="294" />
-                    <a href="" <h2>Проект Prime</h2>
-                    </a>
-                    <h3>Маркетинг</h3>
-                </li>
-                <li>
-                    <img src="./images/portfolio/img5.jpg" alt="Коробочки" width="370" height="294" />
-                    <a href="" <h2>Проект Boxes</h2>
-                    </a>
-                    <h3>Приложение</h3>
-                </li>
-                <li>
-                    <img src="./images/portfolio/img6.jpg" alt="Монитор" width="370" height="294" />
-                    <a href="" <h2>Inspiration has no Borders</h2>
-                    </a>
-                    <h3>Веб-сайт</h3>
-                </li>
-                <li>
-                    <img src="./images/portfolio/img7.jpg" alt="Журнал" width="370" height="294" />
-                    <a href="" <h2>Издание Limited Edition</h2>
-                    </a>
-                    <h3>Дизайн</h3>
-                </li>
-                <li>
-                    <img src="./images/portfolio/img8.jpg" alt="Этикетка" width="370" height="294" />
-                    <a href="" <h2>Проект LAB</h2>
-                    </a>
-                    <h3>Маркетинг</h3>
-                </li>
-                <li>
-                    <img src="./images/portfolio/img9.jpg" alt="Ноутбук" width="370" height="294" />
-                    <a href="" <h2>Growing Business</h2>
-                    </a>
-                    <h3>Приложение</h3>
-                </li>
-            </ul>
-        </section>
+      <section>
+        <!-- Категории -->
+        <h1 hidden>Наши работы</h1>
+        <ul class="list">
+          <li>
+            <button type="button" class="button">Все</button>
+          </li>
+          <li>
+            <button type="button" class="button secondary">Веб-сайты</button>
+          </li>
+          <li>
+            <button type="button" class="button secondary">Приложения</button>
+          </li>
+          <li>
+            <button type="button" class="button secondary">Дизайн</button>
+          </li>
+          <li>
+            <button type="button" class="button secondary">Маркетинг</button>
+          </li>
+        </ul>
+        <h2 hidden>Примеры работ</h2>
+        <ul class="list">
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio/img.jpg"
+                alt="Ноутбук"
+                width="370"
+                height="294"
+              />
+              <h3>Технокряк</h3>
+              <p>Веб-сайт</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio/img2.jpg"
+                alt="Баскетбольная игра"
+                width="370"
+                height="294"
+              />
+              <h3>Постер New Orlean vs Golden Star</h3>
+              <p>Дизайн</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio/img3.jpg"
+                alt="Логотип ресторана Seafood"
+                width="370"
+                height="294"
+              />
+              <h3>Ресторан Seafood</h3>
+              <p>Приложение</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio/img4.jpg"
+                alt="Наушники"
+                width="370"
+                height="294"
+              />
+              <h3>Проект Prime</h3>
+              <p>Маркетинг</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio/img5.jpg"
+                alt="Коробочки"
+                width="370"
+                height="294"
+              />
+              <h3>Проект Boxes</h3>
+              <p>Приложение</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio/img6.jpg"
+                alt="Монитор"
+                width="370"
+                height="294"
+              />
+              <h3>Inspiration has no Borders</h3>
+              <p>Веб-сайт</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio/img7.jpg"
+                alt="Журнал"
+                width="370"
+                height="294"
+              />
+              <h3>Издание Limited Edition</h3>
+              <p>Дизайн</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio/img8.jpg"
+                alt="Этикетка"
+                width="370"
+                height="294"
+              />
+              <h3>Проект LAB</h3>
+              <p>Маркетинг</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio/img9.jpg"
+                alt="Ноутбук"
+                width="370"
+                height="294"
+              />
+              <h3>Growing Business</h3>
+              <p>Приложение</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer>
-        <!-- Футер -->
-        <a href="/"> <span>Web</span> Studio </a>
-        <address>
-            <ul>
-                <li>
-                    <p>г. Киев, пр-т Леси Украинки, 26<br /></p>
-                </li>
-                <li>
-                    <a href="mailto:info@example.com"> info@example.com<br /> </a>
-                </li>
-                <li>
-                    <a href="tel:+380991111111"> +38 099 111 11 11<br /> </a>
-                </li>
-            </ul>
-        </address>
-        <b>
-            присоединяйтесь
-        </b>
-        <ul>
-            <li>
-                <a href="Instagram" aria-label="Ссылка на Instagram">
-                    <img src="./images/instagram.svg" alt="Instagram" />
-                </a>
-            </li>
-            <li>
-                <a href="Twitter" aria-label="Ссылка на Twitter">
-                    <img src="./images/twitter.svg" alt="Twitter" />
-                </a>
-            </li>
-            <li>
-                <a href="Facebook" aria-label="Ссылка на Facebook">
-                    <img src="./images/facebook.svg" alt="Facebook" />
-                </a>
-            </li>
-            <li>
-                <a href="LinkedIn" aria-label="Ссылка на LinkedIn">
-                    <img src="./images/linkedin.svg" alt="LinkedIn" />
-                </a>
-            </li>
+      <!-- Футер -->
+      <a href="/" class="logo"> <span class="logo-accent">Web</span> Studio </a>
+      <address>
+        <ul class="contact list">
+          <li>
+            <p>г. Киев, пр-т Леси Украинки, 26<br /></p>
+          </li>
+          <li>
+            <a href="mailto:info@example.com"> info@example.com<br /> </a>
+          </li>
+          <li>
+            <a href="tel:+380991111111"> +38 099 111 11 11<br /> </a>
+          </li>
         </ul>
-        <b>
-            Подпишитесь на рассылку
-        </b>
+      </address>
+      <b>
+        присоединяйтесь
+      </b>
+      <ul>
+        <li>
+          <a href="Instagram" aria-label="Ссылка на Instagram">
+            <img src="./images/instagram.svg" alt="Instagram" />
+          </a>
+        </li>
+        <li>
+          <a href="Twitter" aria-label="Ссылка на Twitter">
+            <img src="./images/twitter.svg" alt="Twitter" />
+          </a>
+        </li>
+        <li>
+          <a href="Facebook" aria-label="Ссылка на Facebook">
+            <img src="./images/facebook.svg" alt="Facebook" />
+          </a>
+        </li>
+        <li>
+          <a href="LinkedIn" aria-label="Ссылка на LinkedIn">
+            <img src="./images/linkedin.svg" alt="LinkedIn" />
+          </a>
+        </li>
+      </ul>
+      <b>
+        Подпишитесь на рассылку
+      </b>
     </footer>
-</body>
-
+  </body>
 </html>
