--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
           <li><a href="">Контакты</a></li>
         </ul>
 
-        <ul class="contact list">
+        <ul class="header-contact list">
           <li>
             <a href="mailto:info@devstudio.com">
               <img src="./images/envelope.svg" alt="изображение письма" />
@@ -48,23 +48,23 @@
         <h1 hidden>Наши работы</h1>
         <ul class="list">
           <li>
-            <button type="button" class="button">Все</button>
+            <button type="button" class="filtr-button">Все</button>
           </li>
           <li>
-            <button type="button" class="button secondary">Веб-сайты</button>
+            <button type="button" class="filtr-button">Веб-сайты</button>
           </li>
           <li>
-            <button type="button" class="button secondary">Приложения</button>
+            <button type="button" class="filtr-button">Приложения</button>
           </li>
           <li>
-            <button type="button" class="button secondary">Дизайн</button>
+            <button type="button" class="filtr-button">Дизайн</button>
           </li>
           <li>
-            <button type="button" class="button secondary">Маркетинг</button>
+            <button type="button" class="filtr-button">Маркетинг</button>
           </li>
         </ul>
         <h2 hidden>Примеры работ</h2>
-        <ul class="list">
+        <ul class="work-examples list">
           <li>
             <a href="">
               <img
@@ -228,12 +228,12 @@
       <address>
         <ul class="contact list">
           <li>
-            <p>г. Киев, пр-т Леси Украинки, 26<br /></p>
+            <p class="adress">г. Киев, пр-т Леси Украинки, 26<br /></p>
           </li>
-          <li>
+          <li class="footer-contact">
             <a href="mailto:info@example.com"> info@example.com<br /> </a>
           </li>
-          <li>
+          <li class="footer-contact">
             <a href="tel:+380991111111"> +38 099 111 11 11<br /> </a>
           </li>
         </ul>
@@ -241,7 +241,7 @@
       <b>
         присоединяйтесь
       </b>
-      <ul>
+      <ul class="list">
         <li>
           <a href="Instagram" aria-label="Ссылка на Instagram">
             <img src="./images/instagram.svg" alt="Instagram" />
