--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <li><a href="">Контакты</a></li>
         </ul>
 
-        <ul class="contact list">
+        <ul class="header-contact list">
           <li>
             <a href="mailto:info@devstudio.com">
               <img src="./images/envelope.svg" alt="изображение письма" />
@@ -98,7 +98,7 @@
               width="370"
               height="294"
             />
-            <h3>
+            <h3 class="item-title details">
               Десктопные приложения
             </h3>
           </li>
@@ -109,7 +109,7 @@
               width="370"
               height="294"
             />
-            <h3>
+            <h3 class="item-title details">
               Мобильные приложения
             </h3>
           </li>
@@ -120,13 +120,13 @@
               width="370"
               height="294"
             />
-            <h3>
+            <h3 class="item-title details">
               Дизайнерские решения
             </h3>
           </li>
         </ul>
       </section>
-      <section class="section">
+      <section class="section team">
         <!--Третья секция - наша команда-->
         <h2 class="section-title">Наша команда</h2>
         <ul class="list">
@@ -138,8 +138,10 @@
               width="270"
               height="260"
             />
-            <h3>Николай Кучеренко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="element-title">Николай Кучеренко</h3>
+            <p lang="en" class="description">
+              Product Designer
+            </p>
             <ul class="list">
               <li>
                 <a href="Instagram" aria-label="Ссылка на Instagram">
@@ -171,8 +173,8 @@
               width="270"
               height="260"
             />
-            <h3>Ольга Иванова</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="element-title">Ольга Иванова</h3>
+            <p lang="en" class="description">Frontend Developer</p>
             <ul class="list">
               <li>
                 <a href="Instagram" aria-label="Ссылка на Instagram">
@@ -204,8 +206,8 @@
               width="270"
               height="260"
             />
-            <h3>Андрей Шевченко</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="element-title">Андрей Шевченко</h3>
+            <p lang="en" class="description">Marketing</p>
             <ul class="list">
               <li>
                 <a href="Instagram" aria-label="Ссылка на Instagram">
@@ -237,8 +239,8 @@
               width="270"
               height="260"
             />
-            <h3>Иван Николаев</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="element-title">Иван Николаев</h3>
+            <p lang="en" class="description">UI Designer</p>
             <ul class="list">
               <li>
                 <a href="Instagram" aria-label="Ссылка на Instagram">
@@ -323,14 +325,14 @@
       <!-- Футер -->
       <a href="/" class="logo"> <span class="logo-accent">Web</span> Studio </a>
       <address>
-        <ul class="contact list">
+        <ul class="list">
           <li>
-            <p>г. Киев, пр-т Леси Украинки, 26<br /></p>
+            <p class="adress">г. Киев, пр-т Леси Украинки, 26<br /></p>
           </li>
-          <li>
+          <li class="footer-contact">
             <a href="mailto:info@example.com"> info@example.com<br /> </a>
           </li>
-          <li>
+          <li class="footer-contact">
             <a href="tel:+380991111111"> +38 099 111 11 11<br /> </a>
           </li>
         </ul>
