--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
           </li>
         </ul>
         <h2 hidden>Примеры работ</h2>
-        <ul class="work-examples list">
+        <ul class="gallery list">
           <li>
             <a href="">
               <img
@@ -74,8 +74,8 @@
                 height="294"
               />
               <h3>Технокряк</h3>
-              <p>Веб-сайт</p>
-              <p>
+              <p class="lead">Веб-сайт</p>
+              <p class="excerpt details">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
@@ -92,8 +92,8 @@
                 height="294"
               />
               <h3>Постер New Orlean vs Golden Star</h3>
-              <p>Дизайн</p>
-              <p>
+              <p class="lead">Дизайн</p>
+              <p class="excerpt details">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
@@ -109,8 +109,8 @@
                 height="294"
               />
               <h3>Ресторан Seafood</h3>
-              <p>Приложение</p>
-              <p>
+              <p class="lead">Приложение</p>
+              <p class="excerpt details">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
@@ -126,8 +126,8 @@
                 height="294"
               />
               <h3>Проект Prime</h3>
-              <p>Маркетинг</p>
-              <p>
+              <p class="lead">Маркетинг</p>
+              <p class="excerpt details">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
@@ -143,8 +143,8 @@
                 height="294"
               />
               <h3>Проект Boxes</h3>
-              <p>Приложение</p>
-              <p>
+              <p class="lead">Приложение</p>
+              <p class="excerpt details">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
@@ -160,8 +160,8 @@
                 height="294"
               />
               <h3>Inspiration has no Borders</h3>
-              <p>Веб-сайт</p>
-              <p>
+              <p class="lead">Веб-сайт</p>
+              <p class="excerpt details">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
@@ -177,8 +177,8 @@
                 height="294"
               />
               <h3>Издание Limited Edition</h3>
-              <p>Дизайн</p>
-              <p>
+              <p class="lead">Дизайн</p>
+              <p class="excerpt details">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
@@ -194,8 +194,8 @@
                 height="294"
               />
               <h3>Проект LAB</h3>
-              <p>Маркетинг</p>
-              <p>
+              <p class="lead">Маркетинг</p>
+              <p class="excerpt details">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
@@ -211,8 +211,8 @@
                 height="294"
               />
               <h3>Growing Business</h3>
-              <p>Приложение</p>
-              <p>
+              <p class="lead">Приложение</p>
+              <p class="details">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
